--- a/tasks/deploy_steps_tasks.yml
+++ b/tasks/deploy_steps_tasks.yml
@@ -16,7 +16,7 @@
 
   # *CS TODO: connect edge nodes to one or more mesh nodes. Puppet code connected to one random one, I'd prefer to connect to 2 of them
   - name: Define connectors for edge -> internal, replacing existing connectors
-    when: not (interior_ip in interior_nodes)
+    when: not (interior_ip in interior_nodes_list)
     set_fact:
     # *CS TODO: Add the SSL support to mesh mode like node_base from the puppet (internal_tls), see https://github.com/openstack/puppet-tripleo/blob/432b0497f7d0d051f2b4bf34c3e841f2b97bbb44/manifests/profile/base/metrics/qdr.pp#L141
       connectors: "{{ [{
@@ -28,11 +28,11 @@
                   }] }}"
 
   - name: Set additional listeners and connectors on interior mesh nodes
-    when: interior_ip in interior_nodes
+    when: interior_ip in interior_nodes_list
     block:
       - name: Set list of OTHER interior nodes with which to form mesh connections (ones with a lower ordinal position than us in the list)
         set_fact:
-          mesh_connection_nodes_list: "{{ interior_nodes[0:interior_nodes.index(interior_ip)] }}"
+          mesh_connection_nodes_list: "{{ interior_nodes_list[0:interior_nodes.index(interior_ip)] }}"
 
       - debug:
           var: interior_nodes
