--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,7 +43,7 @@
 - name: Set listener address based on ServiceNetMap
   set_fact:
 #    listener_addr: "{{ hostvars[inventory_hostname][service_net_map[(tripleo_role_name | snake_case) + '_metrics_qdr_network'] + '_ip'] }}"
-    listener_addr: "{{ lookup('vars', service_net_map[ (tripleo_role_name + 'MetricsQdrNetwork') | snake_case] + '_ip' )
+    listener_addr: "{{ lookup('vars', service_net_map[ (tripleo_role_name + 'MetricsQdrNetwork') | snake_case] + '_ip' ) }}"
 
 - debug:
     msg: "listener_addr: {{listener_addr}}"
