--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,6 @@
 ---
-###############################################################################
-# TODO: Add the default values in here for any of the converted heat params
-# from tripleo-heat-templates. This serves two purposes: it facilitates
-# testing, and it allows for removal of THT params in the future without
-# affecting the ansible role.
-###############################################################################
-# TODO: Check for any multi-line strings, these aren't handled by this
-# template
-###############################################################################
+qdr_conf_output_dir: /var/lib/config-data/ansible-generated/metrics_qdr
+
 # Corresponds to MetricsQdrConnectors in THT
 # Connectors configuration (array of hashes).
 qdr_connectors: []
@@ -86,6 +79,8 @@ qdr_username: guest
 # Corresponds to MetricsQdrPort in THT
 # Service name or port number on which the qdrouterd will accept connections.
 qdr_listener_port: 5666
+
+qdr_log_output: /var/log/qdrouterd/metrics_qdr.log
 
 # Corresponds to MetricsQdrLoggingSource in THT
 metrics_qdr_logging_source: {'startmsg.regex': '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}(.[0-9]+ \\+[0-9]+)? [A-Z]+ \\([a-z]+\\) ', 'tag': 'openstack.nova.consoleauth', 'file': '/var/log/containers/qdrouterd/metrics_qdr.log'}
