--- a/molecule/common/verify.yml
+++ b/molecule/common/verify.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Check for qdrouterd.conf
       find:
-        paths: /etc/qpid-dispatch/
+        paths: "{{ qdr_conf_output_dir }}"
         patterns: qdrouterd.conf
       register: conf
       failed_when: conf.files|length != 1
@@ -36,7 +36,7 @@
   tasks:
     - name: Slurp the file
       slurp:
-        src: /var/log/qdrouterd/qdrouterd.log
+        src: "{{ qdr_log_output }}"
       register: qdrlog
 
     - name: Decode the content
