--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,6 +11,11 @@ provisioner:
   playbooks:
     prepare: ../common/prepare.yml
     verify: ../common/verify.yml
+  inventory:
+    host_vars:
+      qdrtest:
+        qdr_conf_output_dir: /etc/qpid-dispatch/
+        qdr_log_output: /var/log/qdrouterd/metrics_qdr.log
 verifier:
   name: ansible
 
@@ -31,5 +36,5 @@ scenario:
     - idempotence
     - side_effect
     - verify
-#    - destroy
-#    - cleanup
+    - destroy
+    - cleanup
