s/podman/docker for GHA (temporarily?)
I'll try patching the GHA container[1] to include podman support.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.6
+      # - uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.6
       - name: Pre-pull container
         run: |
           sudo docker pull docker.io/tripleomaster/centos-binary-qdrouterd:current-tripleo-rdo
