--- a/molecule/common/verify.yml
+++ b/molecule/common/verify.yml
@@ -25,7 +25,7 @@
           tasks_from: test_qdr
         vars:
           qdr_container_name: 'qdrtest'
-          container_bin: podman
+          container_bin: docker
 
       rescue:
         - name: Set flag if functional tests failed
