--- a/molecule/common/requirements.yml
+++ b/molecule/common/requirements.yml
@@ -2,3 +2,5 @@
 roles:
   - src: git+https://github.com/infrawatch/functional-tests
     name: functional_tests
+  - src: git+https://github.com/infrawatch/qdr-config-ansible-role
+    name: qdr-config-ansible-role
