Explicitly set CONTAINER_BIN for GHA

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
     env:
       PY_COLORS: '1'
       ANSIBLE_FORCE_COLOR: '1'
+      CONTAINER_BIN: docker
 
     steps:
       - name: Checkout
