Move container_bin to just one, hopefully right, place

--- a/molecule/common/verify.yml
+++ b/molecule/common/verify.yml
@@ -25,6 +25,7 @@
           tasks_from: test_qdr
         vars:
           qdr_container_name: 'qdrtest'
+          container_bin: ${CONTAINER_BIN:-docker}
 
       rescue:
         - name: Set flag if functional tests failed
