--- a/molecule/common/requirements.yml
+++ b/molecule/common/requirements.yml
@@ -3,4 +3,4 @@ roles:
   - src: git+https://github.com/infrawatch/functional-tests
     name: functional_tests
   - src: git+https://github.com/infrawatch/qdr-config-ansible-role
-    name: qdr-config-ansible-role
+    name: qdr_config
