--- a/molecule/controller-mesh-edge-node/converge.yml
+++ b/molecule/controller-mesh-edge-node/converge.yml
@@ -1,12 +1,20 @@
 ---
-- name: Converge
+- import_playbook: ../common/converge.yml
+
+- name: Converge controller-mesh edge node config
   hosts: qdrtest
   tasks:
     - name: Set the variables we need that usually come from tripleo
       set_fact:
+        connectors:
+          - host: stf-default-interconnect-5671-service-telemetry.example.com
+            port: 443
+            role: edge
+            sslProfile: sslProfile
+            verifyHostname: false
         deploy_stage: deploy_steps_tasks
         deployment_mode: controller-mesh
-        controller_node_ips: 10.0.0.20,10.0.0.30,10.0.0.40
+        controller_node_ips: 10.0.0.20,10.0.0.30
         ctlplane_ip: 10.0.0.10
         internal_api_ip: "{{ ansible_default_ipv4.address }}"
         service_net_map:
@@ -16,3 +24,4 @@
 
     - include_role:
         name: "{{ playbook_dir }}/../../../tripleo-qdr-ansible-role"
+        tasks_from: create_config
