--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,2 +1,16 @@
 ---
 - import_playbook: ../common/verify.yml
+
+
+- name: Check log for correct config
+  hosts: qdrtest
+  tasks:
+  - assert:
+      that:
+        - qdrlog_content.find('Router started in Edge mode') != -1
+      success_msg: Router started in Edge mode
+
+  - assert:
+      that:
+        - qdrlog_content is search('Configured Connector: stf-default-interconnect-5671-service-telemetry.example.com:443 .* role=edge')
+      success_msg: Connector to STF configured
